--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^16.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "n": "^9.1.0",
+    "node-cron": "^3.0.2",
     "openai": "^3.2.1",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "vk-io": "^4.8.3"
   }
 }
